[package]
name = "opnsense-unbound-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.8"
log = "0.4.27"
opnsense = { version = "0.1.0", path = "opnsense" }
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
# rocket_contrib = "0.4.11"
serde = { version = "1.0.219", features = ["derive"] }
